--- a/index.html
+++ b/index.html
@@ -282,14 +282,18 @@
           <div id="tab-content-depth-chart" class="tab-pane hidden">
             <h3 class="text-2xl font-bold mb-4 text-gray-800 border-b pb-2">Depth Chart & Strategy</h3>
 
-            <div id="depth-chart-sub-tabs" class="flex gap-2 border-b border-gray-200 mb-4">
+            <!-- SUB-TABS (Offense / Defense / Overalls / Depth Order) -->
+            <div id="depth-chart-subtabs" class="flex gap-2 border-b border-gray-200 mb-4">
               <button
                 class="depth-chart-tab sub-tab active px-4 py-2 font-semibold border-b-2 border-amber-500 text-amber-600"
                 data-sub-tab="offense" aria-selected="true">Offense</button>
+
               <button class="depth-chart-tab sub-tab px-4 py-2 font-semibold text-gray-500 hover:text-gray-700"
                 data-sub-tab="defense" aria-selected="false">Defense</button>
+
               <button class="depth-chart-tab sub-tab px-4 py-2 font-semibold text-gray-500 hover:text-gray-700"
                 data-sub-tab="overalls" aria-selected="false">Positional Ratings</button>
+
               <button class="depth-chart-tab sub-tab px-4 py-2 font-semibold text-gray-500 hover:text-gray-700"
                 data-sub-tab="depth-order" aria-selected="false">Depth Order</button>
             </div>
@@ -302,15 +306,18 @@
                   class="p-2 border rounded bg-gray-50 hover:bg-white cursor-pointer font-medium"></select>
               </div>
 
+              <!-- Visual Field -->
               <div
                 class="visual-field-container relative bg-green-700 rounded-lg overflow-hidden border-4 border-green-800 shadow-inner mb-6"
                 style="min-height: 400px;">
                 <div
                   class="visual-field-header absolute top-2 left-1/2 transform -translate-x-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded text-xs font-bold tracking-widest z-10">
                   OFFENSE</div>
+
                 <div id="offense-visual-field" class="visual-field offense-field w-full h-full absolute inset-0"></div>
               </div>
 
+              <!-- Bench -->
               <div class="bench-container bg-gray-50 p-4 rounded-lg border">
                 <h4 class="text-lg font-bold mb-2 text-gray-700">Offensive Bench</h4>
                 <p class="text-xs text-gray-500 mb-2 italic">Drag players to the field to sub them in.</p>
@@ -326,15 +333,18 @@
                   class="p-2 border rounded bg-gray-50 hover:bg-white cursor-pointer font-medium"></select>
               </div>
 
+              <!-- Visual Field -->
               <div
                 class="visual-field-container relative bg-green-700 rounded-lg overflow-hidden border-4 border-green-800 shadow-inner mb-6"
                 style="min-height: 400px;">
                 <div
                   class="visual-field-header absolute top-2 left-1/2 transform -translate-x-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded text-xs font-bold tracking-widest z-10">
                   DEFENSE</div>
+
                 <div id="defense-visual-field" class="visual-field defense-field w-full h-full absolute inset-0"></div>
               </div>
 
+              <!-- Bench -->
               <div class="bench-container bg-gray-50 p-4 rounded-lg border">
                 <h4 class="text-lg font-bold mb-2 text-gray-700">Defensive Bench</h4>
                 <p class="text-xs text-gray-500 mb-2 italic">Drag players to the field to sub them in.</p>
@@ -342,11 +352,12 @@
               </div>
             </div>
 
-            <!-- POSITIONAL OVERALLS SUB-PANE -->
+            <!-- POSITONAL OVERALLS SUB-PANE -->
             <div id="positional-overalls-container" class="depth-chart-sub-pane hidden overflow-x-auto"></div>
 
-            <!-- DEPTH ORDER SUB-PANE -->
+            <!-- DEPTH ORDER SUB-PANE (DRAG & DROP IMPROVED) -->
             <div id="depth-order-container" class="depth-chart-sub-pane hidden">
+
               <div
                 class="mb-6 bg-blue-50 border border-blue-200 rounded-lg p-4 flex flex-col sm:flex-row justify-between items-center gap-4">
                 <div>
@@ -354,16 +365,20 @@
                   <p class="text-sm text-blue-700">Drag players up or down to set the starter (top) and backup order.
                   </p>
                 </div>
+
                 <button id="auto-reorder-btn"
                   class="btn bg-white border border-gray-300 text-gray-700 hover:bg-gray-100 font-bold py-2 px-4 rounded shadow-sm text-sm">
                   Auto-Sort by Overall
                 </button>
               </div>
 
-              <div id="depth-order-grid"
-                class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4"></div>
+              <!-- CLEAN ROSTER GRID FOR DRAG & DROP -->
+              <div id="depth-order-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+              </div>
+
             </div>
           </div>
+
 
           <!-- MESSAGES TAB -->
           <div id="tab-content-messages" class="tab-pane hidden">
@@ -436,7 +451,8 @@
           <div class="bg-black bg-opacity-60 px-4 py-1 rounded-full border border-gray-700 mb-1">
             <div id="sim-game-down" class="text-lg font-mono text-amber-400 font-bold tracking-widest">1st & 10</div>
           </div>
-          <div id="sim-possession" class="text-xs font-bold text-gray-400 uppercase tracking-widest mb-1">POSSESSION</div>
+          <div id="sim-possession" class="text-xs font-bold text-gray-400 uppercase tracking-widest mb-1">POSSESSION
+          </div>
           <div id="sim-game-drive" class="text-xs text-gray-500">Kickoff</div>
         </div>
 
@@ -586,4 +602,5 @@
   <script type="module" src="js/main.js" defer></script>
 
 </body>
+
 </html>
