--- a/index.html
+++ b/index.html
@@ -464,7 +464,19 @@
               class="team-name text-2xl font-black uppercase tracking-wider text-white drop-shadow-md">Home</span>
           </div>
         </div>
+      </div>
 
+      <div id="sim-matchup-banner"
+        class="bg-gray-900 border-b border-gray-700 py-2 px-4 shadow-inner flex justify-between items-center text-sm font-mono tracking-wide min-h-[40px]">
+        <div class="flex items-center gap-2 w-1/2 justify-start">
+          <span class="text-xs font-bold text-gray-500 uppercase">OFFENSE</span>
+          <span id="sim-banner-offense" class="text-blue-300 font-semibold truncate">Waiting for snap...</span>
+        </div>
+        <div class="h-4 w-px bg-gray-700 mx-2"></div>
+        <div class="flex items-center gap-2 w-1/2 justify-end">
+          <span id="sim-banner-defense" class="text-red-300 font-semibold truncate text-right">Reading...</span>
+          <span class="text-xs font-bold text-gray-500 uppercase">DEFENSE</span>
+        </div>
       </div>
 
       <div
@@ -473,7 +485,9 @@
       </div>
 
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+
         <div class="col-span-1 lg:col-span-2 space-y-4">
+
           <div class="bg-gray-800 rounded-lg border border-gray-700 overflow-hidden shadow-lg">
             <div
               class="bg-gray-900 px-4 py-2 border-b border-gray-700 font-bold text-gray-300 text-sm flex justify-between">
@@ -494,6 +508,7 @@
         </div>
 
         <div class="col-span-1 space-y-4">
+
           <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 shadow-lg">
             <h4 class="text-sm font-bold mb-3 text-gray-400 uppercase tracking-wider">Simulation Speed</h4>
             <div class="grid grid-cols-3 gap-2">
@@ -521,6 +536,7 @@
             <div id="sim-stats-home"></div>
           </div>
         </div>
+
       </div>
     </section>
 
